--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.connection.driver_class=org.postgresql.Driver
-hibernate.connection.url=jdbc:postgresql://192.168.1.17:5432
+hibernate.connection.url=jdbc:postgresql://192.168.1.17:5432/test
 hibernate.connection.username=test_user
 hibernate.connection.password=Cdtnkfyf..00
 hibernate.show_sql=false
